# athena

./: .ccls  .editorconfig  .gitignore  Athena.sln  CMakeLists.txt  LICENSE  README.md  run_build
.github/: card-labeler.yml  labeler.yml
.github/workflows/: project-card-moved.yml
scripts-cli/: CMakeLists.txt  cli.cpp  cli.hpp  commands.cpp  commands.hpp  main.cpp  scripts-cli.vcxproj  scripts-cli.vcxproj.filters
src/: CMakeLists.txt
src/scripts-cli/: CMakeLists.txt  cli.hpp  colors.hpp  command_dispatcher.cpp  command_dispatcher.hpp  files.cpp  files.hpp  main.cpp  packages.config  scripts-cli.vcxproj  scripts-cli.vcxproj.filters  utils.cpp  utils.hpp
test/: CMakeLists.txt
test/scripts-cli-test/: CMakeLists.txt  command_dispatcher_test.cpp  files_test.cpp  packages.config  pch.cpp  pch.h  scripts-cli-test.vcxproj  scripts-cli-test.vcxproj.filters  utils_test.cpp
